# feedex

./: .gitignore  README.md  mix.exs
examples/: Subscriptions-MineReads.opml
lib/: favicon_finder.ex  feed_extractor.ex  feedex.ex  native.ex  opml_parser.ex  tesla_client.ex
lib/feedex/: article_parser.ex  favicon_finder.ex  feed_extractor.ex  opml_parser.ex  tesla_client.ex
native/feedex_native/: Cargo.toml  README.md
native/feedex_native/src/: lib.rs
test/: feedex_test.exs
