[package]
name = "feedex_native"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "feedex_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.23.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde-transcode = "1.1"
serde_rustler = { git = "https://github.com/avencera/serde_rustler.git", branch = "rustler-0.23" }
rss = {version = "2.0", features = ["serde"], default-features = false}
atom_syndication = { version = "0.11", features = ["with-serde"] }
